v0.8.0/_sources/tutorials/advanced/insets.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "tutorials/advanced/insets.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_tutorials_advanced_insets.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_tutorials_advanced_insets.py:


Adding an inset to the figure
=============================

To plot an inset figure inside another larger figure, we can use the
:meth:`pygmt.Figure.inset` method. After a large figure has been created,
call ``inset`` using a ``with`` statement, and new plot elements will be
added to the inset figure instead of the larger figure.

.. GENERATED FROM PYTHON SOURCE LINES 10-13

.. code-block:: default


    import pygmt








.. GENERATED FROM PYTHON SOURCE LINES 15-18

Prior to creating an inset figure, a larger figure must first be plotted. In
the example below, :meth:`pygmt.Figure.coast` is used to create a map of the
US state of Massachusetts.

.. GENERATED FROM PYTHON SOURCE LINES 19-32

.. code-block:: default


    fig = pygmt.Figure()
    fig.coast(
        region=[-74, -69.5, 41, 43],  # Set bounding box of the large figure
        borders="2/thin",  # Plot state boundaries with thin lines
        shorelines="thin",  # Plot coastline with thin lines
        projection="M15c",  # Set Mercator projection and size of 15 centimeter
        land="lightyellow",  # Color land areas light yellow
        water="lightblue",  # Color water areas light blue
        frame="a",  # Set frame with annotation and major tick spacing
    )
    fig.show()




.. image-sg:: /tutorials/advanced/images/sphx_glr_insets_001.png
   :alt: insets
   :srcset: /tutorials/advanced/images/sphx_glr_insets_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    <IPython.core.display.Image object>




.. GENERATED FROM PYTHON SOURCE LINES 33-41

The :meth:`pygmt.Figure.inset` method uses a context manager, and is called
using a ``with`` statement. The ``position`` parameter, including the inset
width, is required to plot the inset. Using the **j** argument, the location
of the inset is set to one of the 9 anchors (bottom-middle-top and
left-center-right). In the example below, ``BL`` sets the inset to the bottom
left. The ``box`` parameter can set the fill and border of the inset. In the
example below, ``+pblack`` sets the border color to black and ``+glightred``
sets the fill to light red.

.. GENERATED FROM PYTHON SOURCE LINES 42-59

.. code-block:: default


    fig = pygmt.Figure()
    fig.coast(
        region=[-74, -69.5, 41, 43],
        borders="2/thin",
        shorelines="thin",
        projection="M15c",
        land="lightyellow",
        water="lightblue",
        frame="a",
    )
    with fig.inset(position="jBL+w3c", box="+pblack+glightred"):
        # pass is used to exit the with statement as no plotting methods are
        # called
        pass
    fig.show()




.. image-sg:: /tutorials/advanced/images/sphx_glr_insets_002.png
   :alt: insets
   :srcset: /tutorials/advanced/images/sphx_glr_insets_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    <IPython.core.display.Image object>




.. GENERATED FROM PYTHON SOURCE LINES 60-66

When using **j** to set the anchor of the inset, the default location is in
contact with the nearby axis or axes. The offset of the inset can be set with
**+o**, followed by the offsets along the x- and y-axis. If only one offset
is passed, it is applied to both axes. Each offset can have its own unit. In
the example below, the inset is shifted 0.5 centimeters on the x-axis and
0.2 centimeters on the y-axis.

.. GENERATED FROM PYTHON SOURCE LINES 67-82

.. code-block:: default


    fig = pygmt.Figure()
    fig.coast(
        region=[-74, -69.5, 41, 43],
        borders="2/thin",
        shorelines="thin",
        projection="M15c",
        land="lightyellow",
        water="lightblue",
        frame="a",
    )
    with fig.inset(position="jBL+w3c+o0.5c/0.2c", box="+pblack+glightred"):
        pass
    fig.show()




.. image-sg:: /tutorials/advanced/images/sphx_glr_insets_003.png
   :alt: insets
   :srcset: /tutorials/advanced/images/sphx_glr_insets_003.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    <IPython.core.display.Image object>




.. GENERATED FROM PYTHON SOURCE LINES 83-87

Standard plotting methods can be called from within the ``inset`` context
manager. The example below uses :meth:`pygmt.Figure.coast` to plot a zoomed
out map that selectively paints the state of Massachusetts to shows its
location relative to other states.

.. GENERATED FROM PYTHON SOURCE LINES 88-118

.. code-block:: default


    fig = pygmt.Figure()
    fig.coast(
        region=[-74, -69.5, 41, 43],
        borders="2/thin",
        shorelines="thin",
        projection="M15c",
        land="lightyellow",
        water="lightblue",
        frame="a",
    )
    # This does not include an inset fill as it is covered by the inset figure
    # Inset width/height are determined by the ``region`` and ``projection``
    # parameters.
    with fig.inset(
        position="jBL+o0.5c/0.2c",
        box="+pblack",
        region=[-80, -65, 35, 50],
        projection="M3c",
    ):
        # Use a plotting method to create a figure inside the inset.
        fig.coast(
            land="gray",
            borders=[1, 2],
            shorelines="1/thin",
            water="white",
            # Use dcw to selectively highlight an area
            dcw="US.MA+gred",
        )
    fig.show()



.. image-sg:: /tutorials/advanced/images/sphx_glr_insets_004.png
   :alt: insets
   :srcset: /tutorials/advanced/images/sphx_glr_insets_004.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    <IPython.core.display.Image object>





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  5.101 seconds)


.. _sphx_glr_download_tutorials_advanced_insets.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: insets.py <insets.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: insets.ipynb <insets.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
